infrastructure/real/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sangsiklo-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sangsiklog.store
      secretName: sangsiklog-web-cert
  rules:
    - host: sangsiklog.store
      http:
        paths:
          - path: /api/auth/token
            pathType: Prefix
            backend:
              service:
                name: sangsiklog-gateway
                port:
                  number: 8080
          - path: /api/auth/email
            pathType: Prefix
            backend:
              service:
                name: sangsiklog-gateway
                port:
                  number: 8080
          - path: /api/email/verify-token
            pathType: Prefix
            backend:
              service:
                name: sangsiklog-gateway
                port:
                  number: 8080
          - path: /api/auth/verify-token
            pathType: Prefix
            backend:
              service:
                name: sangsiklog-gateway
                port:
                  number: 8080
          - path: /api/auth/validate
            pathType: Prefix
            backend:
              service:
                name: sangsiklog-gateway
                port:
                  number: 8080
          - path: /api/graphql
            pathType: Prefix
            backend:
              service:
                name: sangsiklog-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sangsiklog-web
                port:
                  number: 80
